# PlantsSM

./: .gitignore  MANIFEST.in  extra-requirements.txt  pyproject.toml  requirements.txt  requirements_pathway_annotation.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: ci.yml
checkpoints/TestPytorchBaselineModel/epoch_1/: model.pt
examples/: create_new_pipeline.ipynb  esm.ipynb  example.ipynb  predict_pathways.ipynb  test.ipynb  test_annotate_genome.py  test_esm.py  test_esm_ddp.py  test_esm_ec_numbers.py  test_esm_multiple_gpu.py  test_parallel.py  test_parallelism.ipynb  test_predict_pathway.py  test_solutions.ipynb  train_models.py  training_esm.ipynb
examples/data/: aminotransferase_binary.csv  test_head.csv
examples/ec_number_prediction/: generate_features.py  length_analysis.ipynb  test_test.csv  train_models.py  validation_test.csv
examples/efficiency_calculator/: predict_efficiency.py
examples/final_data/diamond_train/: alignment_analysis.ipynb
examples/final_data/diamond_train_validation/: alignment_analysis.ipynb
resources/data/: dataset_GO_class_union.tsv
resources/data/moore_2019/: dados.csv  test_set.tsv
resources/notebook/: merge_datasets.ipynb  test_data_exploration.ipynb  train_models.ipynb
src/data_structures/: biological_entities.py  dataset.py
src/io/: reader.py
src/plants_sm/: _files_constants.py
src/plants_sm/alignments/: alignment.py
src/plants_sm/data_collection/: api.py  uniprot_api.py
src/plants_sm/data_exploration/: boxplot.py  dotplot.py
src/plants_sm/data_standardization/: padding_enumerators.py
src/plants_sm/data_structures/: _utils.py  abstract_entity.py  biological_entities.py  dataset.py  dictionary.py  pandas_dataframe.py
src/plants_sm/design_patterns/: observer.py
src/plants_sm/errors/: condition_errors.py
src/plants_sm/estimation/: _utils.py  estimator.py
src/plants_sm/featurization/: featurizer.py  one_hot_encoder.py  propythia.py
src/plants_sm/hyperparameter_optimization/: experiment.py
src/plants_sm/io/: commons.py  csv.py  excel.py  h5.py  json.py  pickle.py  plantcyc.py  reader.py  writer.py  yaml.py
src/plants_sm/mixins/: mixins.py
src/plants_sm/ml/: __init__.py
src/plants_sm/models/: __init__.py  _esm.py  _utils.py  cnn.py  constants.py  enumerators.py  language_pytorch_models.py  lightning_model.py  model.py  pytorch_model.py  tensorflow_model.py
src/plants_sm/parallelisation/: torch_spawner.py
src/plants_sm/pathway_prediction/: MCTS_A.py  _chem_utils.py  _fine_tune_ec_number_prediction_model.py  _mcts_a_utils.py  _sequence_utils.py  _validation_utils.py  annotator.py  ec_numbers_annotator.py  entities.py  esi_annotator.py  gsm_pathway_integration.py  pathway_prediction.py  precursor_prediction.py  proteome_compass.py  proteome_compassed_reactor.py  reaction_ec_number_annotator.py  reaction_rules_reactor.py  reactions_ec_esi_linker.py  reactor.py  representations.py  retroformer_reactor.py  searcher.py  solution.py
src/plants_sm/pipeline/: pipeline.py
src/plants_sm/reports/: model_report.py
src/plants_sm/transformation/: _utils.py  transformer.py
src/plants_sm/unsupervised/: kmeans.py  pca.py  tsne.py
tests/: __init__.py
tests/data/: data_athaliana.csv  multi_input_dataset.csv  multi_label_data.csv  non_valid_smiles_multi_input_dataset.csv  proteins.csv  reaction_ec_data.csv  test.fasta  test_database_ec_numbers.csv  test_dataset_multi_modal.csv  test_linker.fasta  tomato_ec_annotation.csv  train_dataset_multi_modal.csv  train_test.csv  val_dataset_multi_modal.csv
tests/data/proteins_features/: features_0.pkl  features_1.pkl
tests/integration_tests/: test_dataset_propythia.py  test_io_dataset.py
tests/integration_tests/dataset/: test_dataset.py  test_dataset_bioembeddings.py  test_dataset_deepmol_descriptors.py  test_dataset_import_export.py  test_dataset_label_encoding_tokenizers.py  test_io_dataset.py  (+7 more)
(+217 files in other folders)
