[metadata]
name = PlantsSM
version = 0.0.0
description = PlantsSM
long_description = file: README.md
keywords = plants, secondary metabolism
author = Joao Capela
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    absl-py==1.2.0
    alembic==1.8.1
    attrs==22.1.0
    autopage==0.5.1
    biopython==1.79
    charset-normalizer==2.1.1
    cliff==4.0.0
    cloudpickle==2.2.0
    cmaes==0.8.2
    cmd2==2.4.2
    colorlog==6.7.0
    contourpy==1.0.5
    cycler==0.11.0
    dask==2022.9.1
    et-xmlfile==1.1.0
    etils==0.8.0
    fonttools==4.37.3
    fsspec==2022.8.2
    gensim==4.2.0
    greenlet==1.1.3
    idna==3.4
    importlib-metadata==4.12.0
    importlib-resources==5.9.0
    jax==0.3.20
    jax-unirep==2.2.0
    jaxlib==0.3.20
    joblib==1.2.0
    kiwisolver==1.4.4
    locket==1.0.0
    lxml==4.9.1
    Mako==1.2.3
    MarkupSafe==2.1.1
    matplotlib==3.6.0
    mkl-fft==1.3.1
    mkl-service==2.4.0
    modlamp==4.3.0
    multipledispatch==0.6.0
    mysql-connector-python==8.0.17
    nose==1.3.7
    numpy==1.23.3
    openpyxl==3.0.10
    opt-einsum==3.3.0
    optuna==3.0.2
    pandas==1.4.4
    partd==1.3.0
    pbr==5.10.0
    Pillow==9.2.0
    prettytable==3.4.1
    protobuf==4.21.6
    pydantic==1.10.2
    pyperclip==1.8.2
    pytz==2022.2.1
    PyYAML==6.0
    requests==2.28.1
    scikit-learn==1.1.2
    scipy==1.8.1
    sklearn==0.0
    smart-open==6.2.0
    SQLAlchemy==1.4.41
    stevedore==4.0.0
    threadpoolctl==3.1.0
    toolz==0.12.0
    torch==1.12.1
    torchaudio==0.12.1
    torchvision==0.13.1
    tqdm==4.64.1
    urllib3==1.26.12
    wcwidth==0.2.5
    zipp==3.8.1
    transformers==4.22.2
    SmilesPE==0.0.3
    fair-esm==1.0.2

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
plants_sm = py.typed

[flake8]
max-line-length = 160