[metadata]
name = PlantsSM
version = 0.0.0
description = PlantsSM
long_description = file: README.md
keywords = plants, secondary metabolism
author = Joao Capela
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    biopython==1.79
    dask==2022.2.0
    jax==0.3.20
    jax-unirep==2.2.0
    jaxlib==0.3.20
    joblib==1.1.0
    lxml==4.9.1
    matplotlib==3.5.3
    modlamp==4.3.0
    numpy==1.21.6
    openpyxl==3.0.10
    pandas==1.3.5
    pydantic==1.10.2
    PyYAML==6.0
    requests==2.28.1
    scikit-learn==1.0.2
    scipy==1.7.3
    torch==1.12.1
    torchaudio==0.12.1
    torchvision==0.13.1
    tqdm==4.64.1
    urllib3==1.26.12
    transformers==4.22.2
    SmilesPE==0.0.3
    fair-esm==1.0.2
    cached-property==1.5.2
    deepmol[preprocessing]==0.0.3b0
    mol2vec @ git+https://github.com/samoturk/mol2vec#egg=mol2vec
    map4 @ git+https://github.com/reymond-group/map4@v1.0

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
plants_sm = py.typed

[flake8]
max-line-length = 160